--- a/Client-side/public/assets/scss/components/_blogDetails.scss
+++ b/Client-side/public/assets/scss/components/_blogDetails.scss
@@ -189,6 +189,7 @@
             .imgSection {
               margin-right: 35px;
               img {
+                width: 160px;
                 border-radius: 50%;
               }
             }
