--- a/Client-side/public/assets/scss/style.scss
+++ b/Client-side/public/assets/scss/style.scss
@@ -106,6 +106,7 @@ STYLE SHEET INDEX END
 @import "Dashboad/createProject";
 @import "Dashboad/userComponents";
 @import "Dashboad/singleMassageComponents";
+@import "Dashboad/loader";
 /****************************************************
                  Block Element Styles
 *****************************************************/
