--- a/Client-side/public/assets/scss/Dashboad/_dashboard.scss
+++ b/Client-side/public/assets/scss/Dashboad/_dashboard.scss
@@ -64,9 +64,27 @@
     }
   }
   .pie__chart {
-    margin: 25px 0;
+    margin: 35px 0;
     .recharts-wrapper {
       margin: auto;
+    }
+    .text__left {
+      margin-left: 100px;
+      padding-bottom: 35px;
+      h3 {
+        font-size: 20px;
+        color: var(--paragraph-color);
+      }
+    }
+    .text__right {
+      margin-left: 70px;
+      padding-bottom: 35px;
+      margin-top: 40px;
+
+      h3 {
+        font-size: 20px;
+        color: var(--paragraph-color);
+      }
     }
   }
 }
